chore: misc fixes & fix decorators

--- a/apps/docs/src/content/components/blade.mdx
+++ b/apps/docs/src/content/components/blade.mdx
@@ -27,7 +27,7 @@ import { Header } from "../../components/Header";
       },
     },
   }}
-  decorator={(component) => <div className="flex w-full">{component}</div>}
+  decoratorClassName="flex w-full"
 >
   <div className="p-xs">The answer to all things is 42.</div>
 </Header>
