--- a/apps/docs/src/content/components/blades.mdx
+++ b/apps/docs/src/content/components/blades.mdx
@@ -15,7 +15,7 @@ import { Header } from "../../components/Header";
     atLeastOneExpanded: { defaultValue: false },
     fullWidthBlades: { defaultValue: true },
   }}
-  decorator={(component) => <div className="w-full">{component}</div>}
+  decoratorClassName="w-full"
 >
   <HvBlade label="1">
     <div className="flex items-center p-xs">Content 1</div>
