--- a/apps/docs/src/content/components/icon-container.mdx
+++ b/apps/docs/src/content/components/icon-container.mdx
@@ -1,4 +1,3 @@
-import { User } from "@phosphor-icons/react/User";
 import {
   iconContainerClasses as classes,
   HvIconContainer,
@@ -20,5 +19,5 @@ import { Header } from "../../components/Header";
     rotate: { defaultValue: false },
   }}
 >
-  <User />
+  <div className="i-ph-user" />
 </Header>
