--- a/apps/docs/src/content/components/number-input.mdx
+++ b/apps/docs/src/content/components/number-input.mdx
@@ -18,10 +18,8 @@ import { Header } from "../../components/Header";
     readOnly: { defaultValue: false },
     disabled: { defaultValue: false },
   }}
-  decorator={(c) => <div className="w-full">{c}</div>}
+  decoratorClassName="w-full"
 />
-
-<br />
 
 <Callout type="info">
   The `HvNumberInput` component shares the same API as `HvInput`. For full
