--- a/apps/docs/src/content/components/query-builder.mdx
+++ b/apps/docs/src/content/components/query-builder.mdx
@@ -30,7 +30,7 @@ import { Header } from "../../components/Header";
       },
     },
   }}
-  decorator={(component) => <div className="w-full">{component}</div>}
+  decoratorClassName="w-full"
 />
 
 ### How to use
