--- a/apps/docs/src/content/components/skeleton.mdx
+++ b/apps/docs/src/content/components/skeleton.mdx
@@ -20,7 +20,7 @@ import { Header } from "../../components/Header";
       defaultValue: false,
     },
   }}
-  decorator={(children) => <div className="w-190px">{children}</div>}
+  decoratorClassName="w-190px"
   children={<div>My skeleton example content</div>}
 />
 
