--- a/apps/docs/src/content/components/tree-view.mdx
+++ b/apps/docs/src/content/components/tree-view.mdx
@@ -16,7 +16,7 @@ import { Header } from "../../components/Header";
     multiSelect: { defaultValue: false },
     disableSelection: { defaultValue: false },
   }}
-  decorator={(children) => <HvPanel className="w-300px">{children}</HvPanel>}
+  decoratorClassName="w-300px"
 >
   <HvTreeItem nodeId="1" label="Applications">
     <HvTreeItem nodeId="10" label="Calendar.app" />
