--- a/apps/docs/src/content/components/typography.mdx
+++ b/apps/docs/src/content/components/typography.mdx
@@ -23,10 +23,8 @@ import { Header } from "../../components/Header";
       defaultValue: false,
     },
   }}
-  decorator={(children) => (
-    <div className="w-200px text-balance">{children}</div>
-  )}
-  children={"Welcome to the UI Kit."}
+  decoratorClassName="w-200px text-balance"
+  children="Welcome to UI Kit."
 />
 
 ### Root component
