--- a/apps/docs/src/content/docs/get-started.mdx
+++ b/apps/docs/src/content/docs/get-started.mdx
@@ -1,4 +1,3 @@
-import { CodesandboxLogo, Lightning } from "@phosphor-icons/react";
 import { Card, Cards, Steps, Tabs } from "nextra/components";
 
 # Get Started
@@ -7,13 +6,13 @@ If you just want to try out **UI Kit** without setting up a local project, launc
 
 <Cards>
   <Cards.Card
-    icon={<Lightning />}
+    icon={<div className="i-ph-lightning" />}
     title="Open on StackBlitz"
     href="https://stackblitz.com/github.com/lumada-design/hv-uikit-react/tree/master/examples/uikit-vite-ts"
     target="_blank"
   />
   <Cards.Card
-    icon={<CodesandboxLogo />}
+    icon={<div className="i-ph-codesandbox-logo" />}
     title="Open on CodeSandbox"
     href="https://codesandbox.io/p/sandbox/github.com/lumada-design/hv-uikit-react/tree/master/examples/uikit-vite-ts"
     target="_blank"
