--- a/apps/docs/src/content/components/global-actions.mdx
+++ b/apps/docs/src/content/components/global-actions.mdx
@@ -26,7 +26,7 @@ import { Header } from "../../components/Header";
       </HvIconButton>
     ),
   }}
-  decorator={(component) => <div className="w-full">{component}</div>}
+  decoratorClassName="w-full"
 >
   <HvButton variant="primary">Save</HvButton>
   <HvButton variant="secondarySubtle">Reset</HvButton>
