--- a/apps/docs/src/content/components/overflow-tooltip.mdx
+++ b/apps/docs/src/content/components/overflow-tooltip.mdx
@@ -24,5 +24,5 @@ import { Header } from "../../components/Header";
         "This is a very long text that should be cut because it so long that it doesn't fit",
     },
   }}
-  decorator={(children) => <div className="max-w-160px">{children}</div>}
+  decoratorClassName="max-w-160px"
 />
