--- a/apps/docs/src/content/components/vertical-navigation.mdx
+++ b/apps/docs/src/content/components/vertical-navigation.mdx
@@ -1,5 +1,5 @@
 import { Callout } from "nextra/components";
-import { LogOut, User } from "@hitachivantara/uikit-react-icons";
+import { verticalNavigationClasses as classes } from "@hitachivantara/uikit-react-core";
 
 import { Header } from "../../components/Header";
 
