--- a/apps/docs/src/pages/components/badge.mdx
+++ b/apps/docs/src/pages/components/badge.mdx
@@ -86,13 +86,19 @@ To display a badge on any content, wrap the `children` content with the badge co
 Customize the badge’s color using the [`color`](/docs/styling#color-prop) prop.
 
 ```tsx live
-<div className="flex gap-sm">
-  <HvBadge showCount label={8} icon={<Alert />} />
-  <HvBadge color="primary" showCount label={8} icon={<Alert />} />
-  <HvBadge color="bgPageSecondary" showCount label={8} icon={<Alert />} />
-  <HvBadge color="positive" showCount label={8} icon={<Alert />} />
-  <HvBadge color="coral" showCount label={8} icon={<Alert />} />
-  <HvBadge color="#c73aa8" showCount label={8} icon={<Alert />} />
+<div className="flex flex-col gap-sm">
+  <div className="flex gap-sm">
+    <HvBadge showCount label={8} icon={<Alert />} />
+    <HvBadge color="primary" showCount label={8} icon={<Alert />} />
+    <HvBadge color="textSubtle" showCount label={8} icon={<Alert />} />
+    <HvBadge color="positive" showCount label={8} icon={<Alert />} />
+  </div>
+  <div className="flex gap-sm">
+    <HvBadge label={8} icon={<Alert />} />
+    <HvBadge color="primary" label={8} icon={<Alert />} />
+    <HvBadge color="textSubtle" label={8} icon={<Alert />} />
+    <HvBadge color="positive" label={8} icon={<Alert />} />
+  </div>
 </div>
 ```
 
