--- a/apps/docs/src/pages/examples/inputs.mdx
+++ b/apps/docs/src/pages/examples/inputs.mdx
@@ -3,6 +3,7 @@ import { CodeBlock } from "../../components/code/CodeBlock";
 import copyButton from "../../examples/inputs/CopyButton?raw";
 import dropdownPrefix from "../../examples/inputs/DropdownPrefix?raw";
 import editableValue from "../../examples/inputs/EditableInput?raw";
+import labelSide from "../../examples/inputs/LabelSide?raw";
 import tagsDropdown from "../../examples/inputs/TagsDropdown?raw";
 import tagsSuggestions from "../../examples/inputs/TagsSuggestions?raw";
 import tagsSuggestionsEmpty from "../../examples/inputs/TagsSuggestionsEmpty?raw";
@@ -15,5 +16,6 @@ import tagsSuggestionsEmpty from "../../examples/inputs/TagsSuggestionsEmpty?raw
     <CodeBlock code={{ main: tagsSuggestions }} layout="popup" />
     <CodeBlock code={{ main: tagsSuggestionsEmpty }} layout="popup" />
     <CodeBlock code={{ main: editableValue }} layout="popup" />
+    <CodeBlock code={{ main: labelSide }} layout="popup" />
   </div>
 </div>
