--- a/apps/default-app/src/utils/i18n/localization/en.json
+++ b/apps/default-app/src/utils/i18n/localization/en.json
@@ -1,3 +1,4 @@
 {
-  "intro": "Welcome to the Default App!"
+  "intro": "Welcome to the Default App!",
+  "breadcrumbTitle": "Breadcrumb example page"
 }
