chore: change login layout

--- a/apps/docs/src/content/examples/login.mdx
+++ b/apps/docs/src/content/examples/login.mdx
@@ -5,8 +5,8 @@ import loginShort from "../../examples/logins/LoginShort?raw";
 
 ## Wide layout
 
-<CodeBlock code={loginFull} />
+<CodeBlock code={loginFull} layout="expandable" />
 
 ## Centered layout
 
-<CodeBlock code={loginShort} />
+<CodeBlock code={loginShort} layout="expandable" />
