docs(examples): move to app/examples for flexibility

--- a/apps/docs/src/app/examples/charts/page.mdx
+++ b/apps/docs/src/app/examples/charts/page.mdx
@@ -1,8 +1,7 @@
-import { CodeBlock } from "../../components/code/CodeBlock";
-
-import donutChartTotal from "../../examples/charts/DonutChartTotal?raw";
-import gaugeChart from "../../examples/charts/GaugeChart?raw";
-import lineChartStreamingCode from "../../examples/charts/LineChartStreaming?raw";
+import { CodeBlock } from "../../../components/code/CodeBlock";
+import donutChartTotal from "./DonutChartTotal?raw";
+import gaugeChart from "./GaugeChart?raw";
+import lineChartStreamingCode from "./LineChartStreaming?raw";
 
 <div className="overflow-hidden mt-20">
   <div className="w-101% grid  divide-border [grid-template-columns:repeat(auto-fit,minmax(480px,1fr))] -mt-px -mb-px">
