--- a/apps/docs/src/app/examples/dnd/page.mdx
+++ b/apps/docs/src/app/examples/dnd/page.mdx
@@ -1,14 +1,14 @@
-import { CodeBlock } from "../../components/code/CodeBlock";
+import { CodeBlock } from "../../../components/code/CodeBlock";
 
-import dndKitMultiple from "../../examples/dnd/DndKitMultiple?raw";
-import dndKitSingle from "../../examples/dnd/DndKitSingle?raw";
-import dndNative from "../../examples/dnd/DndNative?raw";
-import dndTypes from "../../examples/dnd/types?raw";
+import dndKitMultiple from "./DndKitMultiple?raw";
+import dndKitSingle from "./DndKitSingle?raw";
+import dndNative from "./DndNative?raw";
+import dndTypes from "./types?raw";
 
-import kanbanComponents from "../../examples/dnd/kanban/Components?raw";
-import kanbanData from "../../examples/dnd/kanban/data?raw";
-import kanban from "../../examples/dnd/kanban/Kanban?raw";
-import kanbanTypes from "../../examples/dnd/kanban/types?raw";
+import kanbanComponents from "./kanban/Components?raw";
+import kanbanData from "./kanban/data?raw";
+import kanban from "./kanban/Kanban?raw";
+import kanbanTypes from "./kanban/types?raw";
 
 <br />
 
