--- a/apps/docs/src/app/examples/inputs/page.mdx
+++ b/apps/docs/src/app/examples/inputs/page.mdx
@@ -1,12 +1,11 @@
-import { CodeBlock } from "../../components/code/CodeBlock";
-
-import copyButton from "../../examples/inputs/CopyButton?raw";
-import dropdownPrefix from "../../examples/inputs/DropdownPrefix?raw";
-import editableValue from "../../examples/inputs/EditableInput?raw";
-import labelSide from "../../examples/inputs/LabelSide?raw";
-import tagsDropdown from "../../examples/inputs/TagsDropdown?raw";
-import tagsSuggestions from "../../examples/inputs/TagsSuggestions?raw";
-import tagsSuggestionsEmpty from "../../examples/inputs/TagsSuggestionsEmpty?raw";
+import { CodeBlock } from "../../../components/code/CodeBlock";
+import copyButton from "./CopyButton?raw";
+import dropdownPrefix from "./DropdownPrefix?raw";
+import editableValue from "./EditableInput?raw";
+import labelSide from "./LabelSide?raw";
+import tagsDropdown from "./TagsDropdown?raw";
+import tagsSuggestions from "./TagsSuggestions?raw";
+import tagsSuggestionsEmpty from "./TagsSuggestionsEmpty?raw";
 
 <div className="overflow-hidden mt-20">
   <div className="w-101% grid divide-border [grid-template-columns:repeat(auto-fit,minmax(360px,1fr))] -mt-px -mb-px auto-rows-min [&>*]:min-h-[200px]">
