--- a/apps/docs/src/app/examples/tables/page.mdx
+++ b/apps/docs/src/app/examples/tables/page.mdx
@@ -1,10 +1,10 @@
-import { CodeBlock } from "../../components/code/CodeBlock";
+import { CodeBlock } from "../../../components/code/CodeBlock";
 
-import defaultTableCode from "../../examples/tables/DefaultTable?raw";
-import filteringTableCode from "../../examples/tables/FilteringTable?raw";
-import groupingTableCode from "../../examples/tables/GroupingTable?raw";
-import makeData from "../../examples/tables/makeData?raw";
-import simpleTableCode from "../../examples/tables/SimpleTable?raw";
+import defaultTableCode from "./DefaultTable?raw";
+import filteringTableCode from "./FilteringTable?raw";
+import groupingTableCode from "./GroupingTable?raw";
+import makeData from "./makeData?raw";
+import simpleTableCode from "./SimpleTable?raw";
 
 ## Simple table
 
